--- a/articles.html
+++ b/articles.html
@@ -30,7 +30,7 @@
     <body>
 
         <!-- header starts -->
-        <header class="header-area">
+        <header class="header-area article-header">
             <div class="container">
                 <div class="ad-text">Advertorial</div>
                 <div class="row">
