--- a/articles.html
+++ b/articles.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <header class="main">
+    <header class="main article-header">
         <div class="container">
             <div class="ad-text">Advertorial</div>
             <div class="row">
