--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
                                 </div>
                                 <div class="form-group mt-1 mb-5">
                                     <label for="Address1">First line of address</label>
-                                    <div class="address-placeholder">
-                                    </div>
+                                    <div class="address-placeholder"><select class="form-control" id="Address1" name="Address1"><option value="">Select</option><option value="17b, Prince Of Wales Road">17b, Prince Of Wales Road</option><option value="1 Prince Of Wales Road">1 Prince Of Wales Road</option><option value="11 Prince Of Wales Road">11 Prince Of Wales Road</option><option value="15 Prince Of Wales Road">15 Prince Of Wales Road</option><option value="17 Prince Of Wales Road">17 Prince Of Wales Road</option><option value="19 Prince Of Wales Road">19 Prince Of Wales Road</option></select></div>
                                 </div>
                             </div>
                         </div>
